# promptledger

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  demo.py  devto.md  prompt_history.csv  prompt_history.jsonl  pyproject.toml
.github/workflows/: ci.yml
.promptledger_demo/: promptledger.db
demo_prompts/: invalid_utf8.txt
examples/: crlf.txt  onboarding.txt
src/promptledger/: __init__.py  cli.py  core.py  db.py  evaluation.py  render.py  review.py  ui.py
src/promptledger/dashboard/: __init__.py  api.py  server.py
src/promptledger/dashboard/static/: app.js  index.html  styles.css
tests/: test_cli_add.py  test_cli_errors.py  test_cli_evaluation.py  test_cli_labels.py  test_cli_markers.py  test_cli_search.py  test_dashboard.py  test_evaluation.py  test_promptledger.py  test_review.py  test_v020_smoke.py
