[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptledger"
version = "0.6.0"
description = "Local-first prompt version control, review, and workspace dashboard for developers"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "PromptLedger Contributors" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]

dependencies = []

[project.optional-dependencies]
ui = ["streamlit>=1.30"]
test = ["pytest"]
dev = ["build", "pytest", "twine"]

[project.scripts]
promptledger = "promptledger.cli:main"

[project.urls]
Homepage = "https://github.com/Ertugrulmutlu/promptledger"
Repository = "https://github.com/Ertugrulmutlu/promptledger"
Issues = "https://github.com/Ertugrulmutlu/promptledger/issues"
CI = "https://github.com/Ertugrulmutlu/promptledger/actions"
Documentation = "https://github.com/Ertugrulmutlu/promptledger#readme"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
promptledger = ["dashboard/static/*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
